syntax = "proto3";

package schema;

message Balance{
  string currency = 1;
  string value = 2;
  string frozen = 3;
  string available = 4;
}

message GetAccountRequest {
  sint32  accountId = 1;
  optional sint32  currencyId = 2;
}
message GetAccountResponse {
  sint32  code = 1;
  optional string  message = 2;
  map<sint32, Balance> data = 3;
}

message IncreaseRequest {
  sint64  requestId = 1;
  sint32  accountId = 2;
  sint32  currencyId = 3;
  string  amount = 4;
}

message IncreaseResponse{
  sint32  code = 1;
  optional string  message = 2;
  optional Balance data = 3;
}

message DecreaseRequest {
  sint64  requestId = 1;
  sint32  accountId = 2;
  sint32  currencyId = 3;
  string  amount = 4;
}

message DecreaseResponse{
  sint32  code = 1;
  optional string  message = 2;
  optional Balance data = 3;
}


service Lightning {
  rpc getAccount (GetAccountRequest) returns (GetAccountResponse) {}
  rpc increase (IncreaseRequest) returns (IncreaseResponse) {}
  rpc decrease (DecreaseRequest) returns (DecreaseResponse) {}
}